fix: slight changes to font size and margin on mobile view

--- a/src/app/_components/BookSummary/BookHero/BookHero.module.css
+++ b/src/app/_components/BookSummary/BookHero/BookHero.module.css
@@ -18,13 +18,20 @@
 }
 
 .title {
-  font-size: 2.5rem;
+  font-size: 1.8rem;
   font-weight: 800;
   line-height: 1.1;
   margin-bottom: 0.5rem;
+  text-align: justify;
   background: linear-gradient(to bottom right, #ffffff, #a1a1aa);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 2.5rem;
+  }
 }
 
 .author {
