--- a/src/app/_components/BookSummary/BookSummary.module.css
+++ b/src/app/_components/BookSummary/BookSummary.module.css
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
-  padding-bottom: 4rem;
+  padding: 0 1.5rem 4rem;
   max-width: 1400px;
   margin: 0 auto;
   width: 100%;
